2005-03-08  Mark McLoughlin  <mark@skynet.ie>

	Fix bug #168336 - weirdness with .desktop files which
	use [KDE Desktop Entry] as the main group.

	* libmenu/desktop-entries.c: (get_flags_from_key_file),
	(get_categories_from_key_file): use the actual desktop
	entry group name.

2005-03-08  Mark McLoughlin  <mark@skynet.ie>

	Should fix bug #167934 even though the reporter
	says it doesn't :-)

	Well, this at least fixes a problem with <LegacyDir>
	if the toplevel directory doesn't contain any entries.

	* libmenu/menu-tree.c: (add_menu_for_legacy_dir):
	Add a <Menu> for the <LegacyDir> if it has any subdirs.

2005-03-08  Mark McLoughlin  <mark@skynet.ie>

	Fix for bug #168445 - menu items in LegacyDirs don't
	get marked as allocated.

	* libmenu/menu-tree.c:
	(mark_allocated_foreach): kill.
	(process_layout), (process_only_unallocated),
	(menu_tree_build_from_layout): store the list of allocated
	entires in a DesktopEntrySet so we can look up an entry
	using its file ID rather than with a straight pointer
	comparison. Entries in LegacyDirs are copies of the original
	enties, so the pointer comparison doesn't work.

2005-03-08  Mark McLoughlin  <mark@skynet.ie>

	Fix for bug #168444 - LegacyDirs with a prefix don't work.

	* libmenu/entry-directories.c: (entry_directory_get_desktop):
	Remove the hyphen from the desktop file ID as well as
	the prefix when looking up the desktop file.

2005-03-07  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: post-release bump to 2.10.1.

==================== 2.10.0 ====================

2005-03-07  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: Version 2.10.0.

2005-03-04  Mark McLoughlin  <mark@skynet.ie>

	Fix from Jeremy Katz <katzj@redhat.com> for bug #169200

	* libmenu/desktop-entries.c (get_categories_from_key_file):
	sizeof(int) != sizeof(gsize).

2005-03-06  Dafydd Harries  <daf@muse.19inch.net>

	* configure.in: Added "cy" to ALL_LINGUAS.

2005-03-02  Abel Cheung  <maddog@linuxhall.org>
